Documentation for PUT /questions, update likes.
