# docs/swagger.yaml
@@ -2,27 +2,6 @@ basePath: /v1/
 consumes:
 - application/json
 definitions:
-  Question:
-    properties:
-      associated_room:
-        type: string
-        x-go-name: AssociatedRoom
-      question:
-        type: string
-        x-go-name: Question
-      question_id:
-        format: int64
-        type: integer
-        x-go-name: QuestionId
-      questioner_name:
-        type: string
-        x-go-name: QuestionerName
-      total_likes:
-        format: int64
-        type: integer
-        x-go-name: TotalLikes
-    type: object
-    x-go-package: github.com/Mathew-Estafanous/Open-Stage/domain
   ResponseError:
     properties:
       message:
@@ -38,6 +17,68 @@ definitions:
         x-go-name: TimeStamp
     type: object
     x-go-package: github.com/Mathew-Estafanous/Open-Stage/domain
+  question:
+    description: |-
+      Every question is given an associated room that the question has been
+      asked.
+    properties:
+      associated_room:
+        description: The room that the question was asked in.
+        example: conference20
+        type: string
+        x-go-name: AssociatedRoom
+      question:
+        description: The question that was asked.
+        example: What is 2 + 2?
+        type: string
+        x-go-name: Question
+      question_id:
+        description: The id for each question
+        example: 3452
+        format: int64
+        type: integer
+        x-go-name: QuestionId
+      questioner_name:
+        description: Name of the questioner.
+        example: Anonymous
+        type: string
+        x-go-name: QuestionerName
+      total_likes:
+        description: 'The total # of likes for that question.'
+        example: 2
+        format: int64
+        minimum: 0
+        type: integer
+        x-go-name: TotalLikes
+    required:
+    - question
+    - associated_room
+    title: Question represents every question asked within a room.
+    type: object
+    x-go-name: Question
+    x-go-package: github.com/Mathew-Estafanous/Open-Stage/domain
+  updateLikes:
+    properties:
+      question_id:
+        description: The ID of the question
+        example: 3452
+        format: int64
+        type: integer
+        x-go-name: Id
+      total_likes:
+        description: New total likes for question
+        example: 2
+        format: int64
+        minimum: 0
+        type: integer
+        x-go-name: TotalLikes
+    required:
+    - question_id
+    - total_likes
+    title: UpdateLike represents the question's new like total.
+    type: object
+    x-go-name: UpdateLike
+    x-go-package: github.com/Mathew-Estafanous/Open-Stage/handler
 host: open-stage-platform.herokuapp.com
 info:
   contact:
@@ -70,6 +111,27 @@ paths:
       summary: Create new question in associated room.
       tags:
       - Questions
+    put:
+      description: 'Updates the total # of likes for the question with the matching
+        question_id'
+      operationId: updateLikes
+      parameters:
+      - in: body
+        name: Body
+        schema:
+          $ref: '#/definitions/updateLikes'
+      responses:
+        "200":
+          $ref: '#/responses/questionResponse'
+        "400":
+          $ref: '#/responses/errorResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "500":
+          $ref: '#/responses/errorResponse'
+      summary: Update question's total number of likes.
+      tags:
+      - Questions
 produces:
 - application/json
 responses:
@@ -80,7 +142,7 @@ responses:
   questionResponse:
     description: A question that has been posted within a room.
     schema:
-      $ref: '#/definitions/Question'
+      $ref: '#/definitions/question'
 schemes:
 - http https
 swagger: "2.0"
